SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Intersystems Cache Plugin: Now works for Intersystems Cache and IRIS.

Look and Feel plugin: Upgrade FlatLaF to 2.4

SQL Script Plugin: The Plugin's help now describes how to run query output directly into a file.
  See bottom of the Plugin's help page.
  Example syntax: @file '/tmp/customers.xlsx' SELECT * FROM customers

Saved Sessions improvements (See the four buttons at the right of SQuirreL's topmost toolbar):
  Internally saved files are treated as normal files but are recognizable by blue bordered file icons.
  Internally saved files can be change tracked by GIT (https://git-scm.com).
  New toolbar to save and commit all files of a Saved Session to GIT.

The about dialog now contains a link to SQuirreL's new GitHub web page:
  https://github.com/squirrel-sql-client

Improved handling of OpenEdge DB specifics.
  Thanks to Tinco van Engen for the patch.

Improved jumps to distinguished preferences sections utilizing
  the new Global Preferences and New Session Properties search.
  Currently used by:
  - Jump to query connection pool configuration.
  - Jump to change tracking preferences by right mouse clicking the SQL editor's left gutter.

SQL editor: Improvements of multiple caret/cursor editing:
 - Searching for next occurrence of selected text now works case insensitive.
 - Improved UI repaint behaviour.
 - Fixed positioning of new carets when added without selection.

The SQL editor allows multiple caret/cursor editing.
  alt+J adds a caret. alt+shift+J removes the last added caret.
  When some text is selected the next occurrence of the selected text will be added a caret.
  When no text is selected the next line will be added a caret at the same line position
  provided the line is long enough.