@@ -37,8 +37,17 @@ SessionManageAction.save.as.new.session=Save Session "{0}" as ...
 
 SessionPersister.saved.session.msg=Saved Session "{0}"
 
-SessionManageAction.print.saved.session.details.msg.panel=Print details about "{0}" to message panel.
-SessionManageAction.saved.session.details=Saved session name: "{0}"\tSaved session default Alias: "{1}", JDBC-URL: {2}, JDBC-User: {3}
+SessionManageAction.print.saved.session.details.msg.panel=Print details of "{0}" to message panel
+
+SavedSessionMoreCtrl.print.saved.session.details.msg.panel=Print details to message panel
+
+SavedSessionMoreCtrl.no.section.to.print.details=No Saved Session selected to print details.
+
+SavedSessionUtil.saved.session.details=Saved session name: "{0}"  /  Saved session default Alias: "{1}", JDBC-URL: {2}, JDBC-User: {3}
+SavedSessionUtil.saved.session.external.file=-- External file: {0}
+SavedSessionUtil.saved.session.internal.file.first=-- Internal file: {0}   (internal files are stored at {1})
+SavedSessionUtil.saved.session.internal.file=-- Internal file: {0}
+
 SessionManageAction.more=More... {0}
 
 SavedSessionMoreDlg.open.or.manage.saved-sessions=Open / manage Saved Sessions
